tests/ui/error/not_meta_list.rs
#[derive(tidy_builder::Builder)]
struct MyStruct {
    #[builder]
    args: Vec<String>,
}

fn main() {}
