tests/ui/error/not_meta_list.stderr
error: Provided attribute is malformed
 --> tests/ui/error/not_meta_list.rs:3:5
  |
3 |     #[builder]
  |     ^^^^^^^^^^
